--- a/index.html
+++ b/index.html
@@ -1,43 +1,275 @@
 <!DOCTYPE html>
 <html lang="ja">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Website</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-            line-height: 1.6;
-        }
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>ゆめかわプロフィール — ポートフォリオ</title>
+  <style>
+    :root{
+      --bg-1: #ffefff;
+      --bg-2: #f0f7ff;
+      --card: rgba(255,255,255,0.75);
+      --muted:#7b8190;
+      --accent-1:#ff9ad1; /*ピンク*/
+      --accent-2:#caa6ff; /*ラベンダー*/
+      --accent-3:#9be7ff; /*ミント*/
+      --glass: rgba(255,255,255,0.6);
+      --radius:20px;
+      --max-width:1050px;
+      --shadow: 0 10px 30px rgba(131, 104, 255, 0.12);
+    }
+    *{box-sizing:border-box}
+    html,body{height:100%}
+    body{
+      margin:0;
+      font-family: "Noto Sans JP", system-ui, -apple-system, "Segoe UI", Roboto, 'Hiragino Kaku Gothic ProN', "游ゴシック", sans-serif;
+      background: radial-gradient(900px 400px at 10% 20%, rgba(255,154,209,0.12), transparent),
+                  radial-gradient(700px 350px at 90% 80%, rgba(154,231,255,0.10), transparent),
+                  linear-gradient(180deg,var(--bg-1), var(--bg-2));
+      color:#2b2b3a;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      padding:32px;
+    }
 
-        h1 {
-            color: #333;
-            border-bottom: 2px solid #ccc;
-            padding-bottom: 10px;
-        }
+    .wrap{
+      width:100%;
+      max-width:var(--max-width);
+      display:grid;
+      grid-template-columns: 340px 1fr;
+      gap:28px;
+      align-items:start;
+      padding:22px;
+    }
 
-        .section {
-            margin: 20px 0;
-        }
-    </style>
+    /* サイドプロフィールカード */
+    .profile-card{
+      background: linear-gradient(180deg, rgba(255,255,255,0.9), rgba(255,255,255,0.85));
+      border-radius:var(--radius);
+      padding:22px;
+      box-shadow: var(--shadow);
+      position:sticky; top:28px;
+      height:fit-content;
+      border:1px solid rgba(255,255,255,0.9);
+      backdrop-filter: blur(6px);
+    }
+    .avatar{
+      width:120px;height:120px;border-radius:50%;overflow:hidden;margin:0 auto 12px; border:6px solid rgba(255,255,255,0.9); box-shadow: 0 6px 18px rgba(255,154,209,0.12);
+    }
+    .avatar img{width:100%;height:100%;object-fit:cover;display:block}
+    .name{ text-align:center; font-size:1.3rem; font-weight:800; margin:8px 0 4px; color:#40304a }
+    .handle{ text-align:center; color:var(--muted); font-size:0.9rem; margin:0 }
+
+    .bio{ margin-top:14px; font-size:0.96rem; color:#4b4753; line-height:1.6 }
+
+    .links{ display:flex; flex-direction:column; gap:10px; margin-top:16px }
+    .link-btn{
+      display:flex; align-items:center; gap:10px; padding:10px 12px; border-radius:14px; text-decoration:none; color:inherit; font-weight:700;
+      background: linear-gradient(90deg, rgba(255,255,255,0.6), rgba(255,255,255,0.55));
+      border:1px solid rgba(200,180,230,0.45);
+      transition:transform .18s ease, box-shadow .18s ease;
+    }
+    .link-btn:hover{ transform: translateY(-6px); box-shadow: 0 14px 40px rgba(138, 114, 206, 0.12)}
+    .link-icon{width:36px;height:36px;border-radius:10px;background:linear-gradient(180deg,var(--accent-1), var(--accent-2));display:inline-flex;align-items:center;justify-content:center;font-weight:800;color:#fff}
+
+    .nav{ display:flex; gap:8px; margin-top:18px; justify-content:center }
+    .nav button{ background:transparent;border:1px dashed rgba(80,70,110,0.06); padding:8px 12px; border-radius:12px; color:var(--muted); cursor:pointer }
+    .nav button.active{ color:var(--accent-2); border-color: rgba(186,148,255,0.3); box-shadow:0 8px 22px rgba(186,148,255,0.06)}
+
+    /* メインエリア */
+    .main{
+      min-height:60vh; background:transparent; padding:8px;
+    }
+    .card{
+      background: linear-gradient(180deg, rgba(255,255,255,0.92), rgba(255,255,255,0.9));
+      border-radius:14px; padding:18px; margin-bottom:18px; border:1px solid rgba(220,210,240,0.6); box-shadow: 0 8px 30px rgba(120,100,160,0.06)
+    }
+
+    /* remove previous two-column detail by replacing with single block items */
+    .home-grid{ display:grid; grid-template-columns: 1fr; gap:12px }
+    .home-card{ background:linear-gradient(180deg, rgba(255,250,255,0.6), rgba(245,250,255,0.6)); padding:12px; border-radius:12px;border:1px solid rgba(240,230,255,0.6)}
+
+    /* ギャラリーグリッド */
+    .gallery-grid{
+      display:grid; grid-template-columns: repeat(auto-fill,minmax(160px,1fr)); gap:14px;
+    }
+    .thumb{ position:relative; overflow:hidden; border-radius:14px; cursor:pointer; height:170px; background:linear-gradient(180deg, rgba(255,255,255,0.7), rgba(255,255,255,0.6)); padding:8px; display:flex; align-items:center; justify-content:center; border:1px solid rgba(230,220,240,0.6)}
+    .thumb img{ width:100%; height:100%; object-fit:cover; display:block; border-radius:10px; transition:transform .45s cubic-bezier(.2,.9,.2,1) }
+    .thumb:hover img{ transform:scale(1.06) }
+
+    /* polaroid caption */
+    .polaroid{ background:linear-gradient(180deg,#fff,#fff); padding:8px;border-radius:12px; box-shadow: 0 8px 18px rgba(120,80,140,0.06); text-align:center }
+    .caption{ font-size:0.85rem; color:var(--muted); margin-top:8px }
+
+    /* Lightbox */
+    .lightbox{
+      position:fixed; inset:0; display:none; align-items:center; justify-content:center; background:linear-gradient(180deg, rgba(46,16,54,0.6), rgba(12,8,24,0.6)); z-index:60; padding:24px
+    }
+    .lightbox.open{ display:flex }
+    .lightbox-inner{ max-width:1100px; width:100%; max-height:90vh; display:flex; gap:16px; align-items:center }
+    .lightbox-img{ flex:1; background:linear-gradient(180deg, rgba(255,255,255,0.95), rgba(250,245,255,0.95)); border-radius:12px; overflow:hidden; display:flex; align-items:center; justify-content:center; padding:18px }
+    .lightbox-img img{ max-width:100%; max-height:80vh; object-fit:contain; border-radius:6px }
+    .lightbox-meta{ width:300px; color:#3b3650; background: linear-gradient(180deg, rgba(255,255,255,0.9), rgba(250,245,255,0.9)); padding:16px; border-radius:12px; border:1px solid rgba(220,210,240,0.6) }
+    .close-btn{ background:linear-gradient(90deg,var(--accent-1),var(--accent-2)); border:0;color:#fff;font-size:1.1rem; padding:6px 10px;border-radius:10px; cursor:pointer }
+
+    /* small decorative stars */
+    .star{ position:absolute; width:8px; height:8px; border-radius:50%; background:linear-gradient(90deg, #fff, rgba(255,255,255,0.85)); box-shadow:0 4px 12px rgba(255,154,209,0.12) }
+
+    /* responsive */
+    @media (max-width:980px){
+      .wrap{ grid-template-columns: 1fr; }
+      .profile-card{ position:relative }
+      .avatar{ width:100px; height:100px }
+      .lightbox-inner{ flex-direction:column }
+      .lightbox-meta{ width:100% }
+    }
+
+  </style>
 </head>
-
 <body>
-    <h1>Welcome to My Website</h1>
+  <div class="wrap">
+    <aside class="profile-card" aria-label="プロフィール">
+      <div class="avatar" aria-hidden>
+        <img src="https://images.unsplash.com/photo-1544005313-94ddf0286df2?q=80&w=600&auto=format&fit=crop&ixlib=rb-4.0.3&s=placeholder" alt="avatar">
+      </div>
+      <div class="name">モノノベ モノコ</div>
+      <div class="handle">@mononobe</div>
+      <p class="bio">イラストと小話を投稿するクリエイター。ふんわり可愛い・ゆめかわいい世界観が得意です。</p>
 
-    <div class="section">
-        <h2>About</h2>
-        <p>こちらにサイトの説明を記載してください。</p>
-    </div>
+      <div class="links">
+        <a class="link-btn" href="https://www.youtube.com/" target="_blank" rel="noopener">
+          <span class="link-icon">▶</span>
+          <span>YouTube</span>
+        </a>
+        <a class="link-btn" href="https://twitter.com/" target="_blank" rel="noopener">
+          <span class="link-icon">t</span>
+          <span>Twitter</span>
+        </a>
+        <a class="link-btn" href="mailto:example@example.com" target="_blank" rel="noopener">
+          <span class="link-icon">✉</span>
+          <span>お問い合わせ</span>
+        </a>
+      </div>
 
-    <div class="section">
-        <h2>Contact</h2>
-        <p>連絡先情報があれば記載してください。</p>
+      <nav class="nav" role="tablist" aria-label="ページ切替">
+        <button id="nav-home" class="active" data-view="home" aria-controls="view-home">自己紹介</button>
+        <button id="nav-gallery" data-view="gallery" aria-controls="view-gallery">ギャラリー</button>
+      </nav>
+    </aside>
+
+    <main class="main">
+      <section id="view-home" class="card" role="tabpanel">
+        <h2>About / 自己紹介</h2>
+        <p>こんにちは！ここは自己紹介ページです。活動内容やリンクをゆめかわいい雰囲気でまとめています。</p>
+        <div class="home-grid" style="margin-top:14px">
+          <div class="home-card">
+            <h4 style="margin:0 0 6px 0">活動内容</h4>
+            <p style="margin:0; color:var(--muted)">イラスト制作、短編のキャラクターストーリー、週1のライブ配信など。ご依頼はお問い合わせからどうぞ。</p>
+          </div>
+          <div class="home-card">
+            <h4 style="margin:0 0 6px 0">メディア</h4>
+            <p style="margin:0; color:var(--muted)">YouTube / Twitter にて制作過程や告知を投稿しています。SNSボタンから飛べます。</p>
+          </div>
+        </div>
+      </section>
+
+      <section id="view-gallery" class="card" hidden role="tabpanel">
+        <h2>Gallery / ギャラリー</h2>
+        <p style="color:var(--muted)">クリックで拡大表示します。作品はサンプル画像です。</p>
+        <div class="gallery-grid" id="gallery">
+          <!-- JSで埋める -->
+        </div>
+      </section>
+
+    </main>
+  </div>
+
+  <!-- Lightbox -->
+  <div id="lightbox" class="lightbox" aria-hidden="true">
+    <div class="lightbox-inner" role="dialog" aria-modal="true">
+      <div class="lightbox-img">
+        <img id="lightbox-img" src="" alt="expanded artwork">
+      </div>
+      <div class="lightbox-meta">
+        <div style="display:flex; justify-content:space-between; align-items:center">
+          <strong id="lightbox-title">Title</strong>
+          <button class="close-btn" id="lightbox-close" aria-label="閉じる">✕</button>
+        </div>
+        <p id="lightbox-desc" style="margin-top:10px; color:var(--muted)">作品の説明テキストが入ります。制作年や使用ツールなどをここに記載できます。</p>
+      </div>
     </div>
+  </div>
+
+  <script>
+    // --- SPA 切替 ---
+    const navButtons = document.querySelectorAll('.nav button');
+    navButtons.forEach(btn=>{
+      btn.addEventListener('click',()=>{
+        document.querySelectorAll('[role="tabpanel"]').forEach(panel=> panel.hidden=true);
+        document.querySelectorAll('.nav button').forEach(b=>b.classList.remove('active'));
+        btn.classList.add('active');
+        const view = btn.dataset.view;
+        document.getElementById('view-' + view).hidden = false;
+      })
+    })
+
+    // --- ギャラリーのサンプルデータ ---
+    const galleryData = [
+      {src:'https://images.unsplash.com/photo-1503023345310-bd7c1de61c7d?q=80&w=1200&auto=format&fit=crop', title:'作品 A', desc:'色調実験。'},
+      {src:'https://images.unsplash.com/photo-1519681393784-d120267933ba?q=80&w=1200&auto=format&fit=crop', title:'作品 B', desc:'キャラクターラフ。'},
+      {src:'https://images.unsplash.com/photo-1529626455594-4ff0802cfb7e?q=80&w=1200&auto=format&fit=crop', title:'作品 C', desc:'ポートレート研究。'},
+      {src:'https://images.unsplash.com/photo-1517841905240-472988babdf9?q=80&w=1200&auto=format&fit=crop', title:'作品 D', desc:'光の表現。'},
+      {src:'https://images.unsplash.com/photo-1549693578-d683be217e58?q=80&w=1200&auto=format&fit=crop', title:'作品 E', desc:'彩度調整の練習。'},
+      {src:'https://images.unsplash.com/photo-1524504388940-b1c1722653e1?q=80&w=1200&auto=format&fit=crop', title:'作品 F', desc:'背景演出。'}
+    ];
+
+    const galleryEl = document.getElementById('gallery');
+    galleryData.forEach((item, idx)=>{
+      const div = document.createElement('button');
+      div.className = 'thumb';
+      div.setAttribute('aria-label', item.title);
+      div.innerHTML = `<div class="polaroid"><img src="${item.src}" alt="${item.title}"><div class="caption">${item.title}</div></div>`;
+      div.addEventListener('click', ()=> openLightbox(idx));
+      galleryEl.appendChild(div);
+    });
+
+    // --- Lightbox ---
+    const lightbox = document.getElementById('lightbox');
+    const lbImg = document.getElementById('lightbox-img');
+    const lbTitle = document.getElementById('lightbox-title');
+    const lbDesc = document.getElementById('lightbox-desc');
+    const lbClose = document.getElementById('lightbox-close');
+    let current = 0;
+
+    function openLightbox(i){
+      current = i;
+      const it = galleryData[i];
+      lbImg.src = it.src;
+      lbTitle.textContent = it.title;
+      lbDesc.textContent = it.desc;
+      lightbox.classList.add('open');
+      lightbox.setAttribute('aria-hidden','false');
+      document.body.style.overflow = 'hidden';
+    }
+    function closeLightbox(){
+      lightbox.classList.remove('open');
+      lightbox.setAttribute('aria-hidden','true');
+      document.body.style.overflow = '';
+    }
+    lbClose.addEventListener('click', closeLightbox);
+    lightbox.addEventListener('click', (e)=>{ if(e.target===lightbox) closeLightbox() });
+    window.addEventListener('keydown', (e)=>{
+      if(lightbox.classList.contains('open')){
+        if(e.key === 'Escape') closeLightbox();
+        if(e.key === 'ArrowRight') openLightbox((current+1) % galleryData.length);
+        if(e.key === 'ArrowLeft') openLightbox((current-1+galleryData.length) % galleryData.length);
+      }
+    });
+
+    // 初期表示: Home
+    document.getElementById('nav-home').click();
+
+  </script>
 </body>
-
 </html>
